Production Ready SnapBuy